// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Component renders the Dragon component if dragon data has been passed as an item 1`] = `
.c0 {
  display: grid;
  grid-column-gap: 10px;
  grid-template-columns: repeat(5,1fr);
  grid-template-rows: repeat(2,1fr);
  padding: 15px;
  width: 100%;
}

.c1 {
  grid-area: 1 / 1 / 3 / 3;
}

.c1 img {
  width: 100%;
}

.c2 {
  grid-area: 1 / 3 / 3 / 6;
}

<a
  href="/dragons/dragon1"
>
  <li
    class="c0"
    data-testid="dragon"
  >
    <div
      class="c1"
    >
      <img
        alt="{item.name}"
        src="https://imgur.com/DaCfMsj.jpg"
      />
    </div>
    <div
      class="c2"
    >
      <h2>
        Dragon 1
      </h2>
      <p>
        Dragon is a reusable spacecraft developed by SpaceX, an American private space transportation company based in Hawthorne, California. Dragon is launched into space by the SpaceX Falcon 9 two-stage-to-orbit launch vehicle. The Dragon spacecraft was originally designed for human travel, but so far has only been used to deliver cargo to the International Space Station (ISS).
      </p>
      <p>
        Learn more...
      </p>
    </div>
  </li>
</a>
`;

exports[`ListItem Component renders the Rocket component if rocket data has been passed as an item 1`] = `
.c0 {
  display: grid;
  grid-column-gap: 10px;
  grid-template-columns: repeat(5,1fr);
  grid-template-rows: repeat(2,1fr);
  padding: 15px;
  width: 100%;
}

.c1 {
  grid-area: 1 / 1 / 3 / 3;
}

.c1 img {
  width: 100%;
}

.c2 {
  grid-area: 1 / 3 / 3 / 6;
}

<a
  href="/rockets/falcon1"
>
  <li
    class="c0"
    data-testid="rocket"
  >
    <div
      class="c1"
    >
      <img
        alt="Falcon 1"
        src="https://imgur.com/DaCfMsj.jpg"
      />
    </div>
    <div
      class="c2"
    >
      <h2>
        Falcon 1
      </h2>
      <p>
        The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth.
      </p>
      <p>
        Learn more...
      </p>
    </div>
  </li>
</a>
`;
